--- a/calendar.css
+++ b/calendar.css
@@ -1,64 +1,46 @@
 html,
 body {
-	overflow: hidden;
-	width: 100%;
-}
+  overflow: hidden;
+  width: 100%; }
 
-div.ac-calendar-container {
-	height: 460px;
-	position: relative;
-	width: 100%;
-}
-
-div.ac-calendar-months {
-	height: 460px;
-	position: absolute;
-	width: 100%;
-	left: 50%;
-	transform: translateX(-50%);
-}
-
-div.ac-calendar {
-	/* position: absolute; */
-	/* left: 50%; */
-	/* transform: translateX(-50%); */
-	/* height: 100%; */
-	height: 460px;
-	width: 100%;
-}
-
-table.ac-table {
-	height: 460px !important;
-	position: absolute;
-	left: 50%;
-	transform: translateX(-50%);
-	width: 100% !important;
-}
-
-tbody {
-	height: 460px;
-	position: absolute;
-	left: 50%;
-	transform: translateX(-50%);
-	width: 100%;
-}
-
-tbody tr.ac-heading,
-tbody tr.ac-weekdays {
-	left: 50%;
-	margin-bottom: 50px;
-	position: absolute;
-	transform: translateX(-50%);
-	width: 100%;
-}
-
-td.ac-day {
-	margin-left: 1rem;
-	margin-right: 1rem;
-}
-
-td.ac-day span.ac-day-split-day,
-td.ac-day span.ac-day-split-bottom.ac-day-split-bottom-ac-grey-out-history,
-td.ac-day span.ac-day-split-top.ac-day-split-top-ac-grey-out-history {
-	font-size: 1.5rem;
-}
+.ac-calendar-container {
+  height: 460px;
+  position: relative;
+  width: 100%; }
+  .ac-calendar-container .ac-calendar-months {
+    height: 100%;
+    width: 100%; }
+    .ac-calendar-container .ac-calendar-months .ac-calendar {
+      position: absolute;
+      width: 100%; }
+      .ac-calendar-container .ac-calendar-months .ac-calendar table.ac-table {
+        height: 460px !important;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 100% !important; }
+        .ac-calendar-container .ac-calendar-months .ac-calendar table.ac-table tbody {
+          height: 460px;
+          position: absolute;
+          left: 50%;
+          transform: translateX(-50%);
+          width: 100%; }
+          .ac-calendar-container .ac-calendar-months .ac-calendar table.ac-table tbody tr.ac-heading {
+            left: 50%;
+            position: absolute;
+            transform: translateX(-50%);
+            width: 100%; }
+            .ac-calendar-container .ac-calendar-months .ac-calendar table.ac-table tbody tr.ac-heading th.ac-heading {
+              width: 100%; }
+          .ac-calendar-container .ac-calendar-months .ac-calendar table.ac-table tbody tr.ac-weekdays {
+            left: 50%;
+            position: absolute;
+            transform: translateX(-50%);
+            width: 100%; }
+          .ac-calendar-container .ac-calendar-months .ac-calendar table.ac-table tbody tr td.ac-day {
+            margin-left: 1rem;
+            margin-right: 1rem; }
+            .ac-calendar-container .ac-calendar-months .ac-calendar table.ac-table tbody tr td.ac-day span.ac-day-split-day,
+            .ac-calendar-container .ac-calendar-months .ac-calendar table.ac-table tbody tr td.ac-day span.ac-day-split-bottom.ac-day-split-bottom-ac-grey-out-history,
+            .ac-calendar-container .ac-calendar-months .ac-calendar table.ac-table tbody tr td.ac-day span.ac-day-split-top.ac-day-split-top-ac-grey-out-history {
+              font-size: 1.5rem; }
