--- a/calendar.scss
+++ b/calendar.scss
@@ -14,18 +14,21 @@ body {
     width: 100%;
 
     .ac-calendar {
+      height: 100%;
       position: absolute;
       width: 100%;
 
       table.ac-table {
-        height: 460px !important;
+        height: 100%;
+        //height: 460px !important;
         position: absolute;
         left: 50%;
         transform: translateX(-50%);
         width: 100% !important;
 
         tbody {
-          height: 460px;
+          height: 100%;
+          //height: 460px;
           position: absolute;
           left: 50%;
           transform: translateX(-50%);
@@ -56,16 +59,80 @@ body {
           }
 
           tr {
+            //left: 50%;
+            //margin-bottom: 2rem;
+            //position: absolute;
+            //transform: translateX(-50%);
+            //width: 100%;
+
+            //&:first-child {
+            //  left: 50%;
+            //  margin-bottom: 2rem;
+            //  position: absolute;
+            //  transform: translateX(-50%);
+            //}
+
+            //&:last-child {
+            //  left: 50%;
+            //  margin-bottom: 2rem;
+            //  position: absolute;
+            //  transform: translateX(-50%);
+            //}
+
 
             td.ac-day {
-              margin-left: 1rem;
-              margin-right: 1rem;
+              //margin-left: 1rem;
+              //margin-right: 1rem;
+              position: absolute;
+              //left: 50%;
+              //transform: translateX(-50%);
+              width: calc((100% / 7) - 1);
 
               span.ac-day-split-day,
               span.ac-day-split-bottom.ac-day-split-bottom-ac-grey-out-history,
               span.ac-day-split-top.ac-day-split-top-ac-grey-out-history {
                 font-size: 1.5rem;
               }
+            }
+
+            td.ac-day:nth-child(1) {
+              //position: absolute;
+              left: 14%;
+              transform: translateX(-14%);
+            }
+
+            td.ac-day:nth-child(2) {
+              //position: absolute;
+              left: 28%;
+              transform: translateX(-28%);
+            }
+
+            td.ac-day:nth-child(3) {
+              //position: absolute;
+              left: 42%;
+              transform: translateX(-42%);
+            }
+
+            td.ac-day:nth-child(4) {
+              position: absolute;
+              left: 50%;
+              transform: translateX(-50%);
+            }
+
+            td.ac-day:nth-child(5) {
+              //position: absolute;
+              left: 58%;
+              transform: translateX(-58%);
+            }
+
+            td.ac-day:nth-child(6) {
+              left: 72%;
+              transform: translateX(-72%);
+            }
+
+            td.ac-day:nth-child(7) {
+              left: 86%;
+              transform: translateX(-86%);
             }
           }
         }
