--- a/calendar.css
+++ b/calendar.css
@@ -43,6 +43,7 @@ body {
               width: calc((100% / 7) - 1); }
           .ac-calendar-container .ac-calendar-months .ac-calendar table.ac-table tbody tr td.ac-day {
             position: absolute;
+            margin-top: 3rem;
             width: calc((100% / 7) - 1); }
             .ac-calendar-container .ac-calendar-months .ac-calendar table.ac-table tbody tr td.ac-day span.ac-day-split-day,
             .ac-calendar-container .ac-calendar-months .ac-calendar table.ac-table tbody tr td.ac-day span.ac-day-split-bottom.ac-day-split-bottom-ac-grey-out-history,
@@ -58,7 +59,6 @@ body {
             left: 42%;
             transform: translateX(-42%); }
           .ac-calendar-container .ac-calendar-months .ac-calendar table.ac-table tbody tr td.ac-day:nth-child(4) {
-            position: absolute;
             left: 50%;
             transform: translateX(-50%); }
           .ac-calendar-container .ac-calendar-months .ac-calendar table.ac-table tbody tr td.ac-day:nth-child(5) {
