--- a/calendar.scss
+++ b/calendar.scss
@@ -84,8 +84,7 @@ body {
               //margin-left: 1rem;
               //margin-right: 1rem;
               position: absolute;
-              //left: 50%;
-              //transform: translateX(-50%);
+              margin-top: 3rem;
               width: calc((100% / 7) - 1);
 
               span.ac-day-split-day,
@@ -96,31 +95,26 @@ body {
             }
 
             td.ac-day:nth-child(1) {
-              //position: absolute;
               left: 14%;
               transform: translateX(-14%);
             }
 
             td.ac-day:nth-child(2) {
-              //position: absolute;
               left: 28%;
               transform: translateX(-28%);
             }
 
             td.ac-day:nth-child(3) {
-              //position: absolute;
               left: 42%;
               transform: translateX(-42%);
             }
 
             td.ac-day:nth-child(4) {
-              position: absolute;
               left: 50%;
               transform: translateX(-50%);
             }
 
             td.ac-day:nth-child(5) {
-              //position: absolute;
               left: 58%;
               transform: translateX(-58%);
             }
