--- a/calendar.scss
+++ b/calendar.scss
@@ -1,136 +1,2 @@
-html,
-body {
-  overflow: hidden;
-  width: 100%;
-}
-
-.ac-calendar-container {
-  height: 460px;
-  position: relative;
-  width: 100%;
-
-  .ac-calendar-months {
-    height: 100%;
-    width: 100%;
-
-    .ac-calendar {
-      height: 100%;
-      position: absolute;
-      width: 100%;
-
-      table.ac-table {
-        height: 100%;
-        //height: 460px !important;
-        position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 100% !important;
-
-        tbody {
-          height: 100%;
-          //height: 460px;
-          position: absolute;
-          left: 50%;
-          transform: translateX(-50%);
-          width: 100%;
-
-          tr.ac-heading {
-            left: 50%;
-            margin-bottom: 2rem;
-            position: absolute;
-            transform: translateX(-50%);
-            width: 100%;
-
-            th.ac-heading {
-              width: 100%;
-            }
-          }
-
-          tr.ac-weekdays {
-            left: 50%;
-            margin-top: 2rem;
-            position: absolute;
-            transform: translateX(-50%);
-            //width: 100%;
-
-            td {
-              width: calc((100% / 7) - 1);
-            }
-          }
-
-          tr {
-            //left: 50%;
-            //margin-bottom: 2rem;
-            //position: absolute;
-            //transform: translateX(-50%);
-            //width: 100%;
-
-            //&:first-child {
-            //  left: 50%;
-            //  margin-bottom: 2rem;
-            //  position: absolute;
-            //  transform: translateX(-50%);
-            //}
-
-            //&:last-child {
-            //  left: 50%;
-            //  margin-bottom: 2rem;
-            //  position: absolute;
-            //  transform: translateX(-50%);
-            //}
-
-
-            td.ac-day {
-              //margin-left: 1rem;
-              //margin-right: 1rem;
-              position: absolute;
-              margin-top: 3rem;
-              width: calc((100% / 7) - 1);
-
-              span.ac-day-split-day,
-              span.ac-day-split-bottom.ac-day-split-bottom-ac-grey-out-history,
-              span.ac-day-split-top.ac-day-split-top-ac-grey-out-history {
-                font-size: 1.5rem;
-              }
-            }
-
-            td.ac-day:nth-child(1) {
-              left: 14%;
-              transform: translateX(-14%);
-            }
-
-            td.ac-day:nth-child(2) {
-              left: 28%;
-              transform: translateX(-28%);
-            }
-
-            td.ac-day:nth-child(3) {
-              left: 42%;
-              transform: translateX(-42%);
-            }
-
-            td.ac-day:nth-child(4) {
-              left: 50%;
-              transform: translateX(-50%);
-            }
-
-            td.ac-day:nth-child(5) {
-              left: 58%;
-              transform: translateX(-58%);
-            }
-
-            td.ac-day:nth-child(6) {
-              left: 72%;
-              transform: translateX(-72%);
-            }
-
-            td.ac-day:nth-child(7) {
-              left: 86%;
-              transform: translateX(-86%);
-            }
-          }
-        }
-      }
-    }
-  }
-}
+@import "styles";
+@import "variables";
