--- a/_variables.scss
+++ b/_variables.scss
@@ -1,1 +1,10 @@
 $gutter-horizontal: 1rem;
+$day-in-row-margin-top-multiplier: 1rem;
+
+$sunday-position: 8%;
+$monday-position: 22%;
+$tuesday-position: 36%;
+$wednesday-position: 50%;
+$thursday-position: 64%;
+$friday-position: 78%;
+$saturday-position: 92%;
