--- a/_variables.scss
+++ b/_variables.scss
@@ -1,5 +1,6 @@
+$iframe-height: 800px;
 $gutter-horizontal: 1rem;
-$day-in-row-margin-top-multiplier: 1rem;
+$day-in-row-margin-top-multiplier: 3rem;
 
 $sunday-position: 8%;
 $monday-position: 22%;
